# icy_view

./: Cargo.toml  README.md
.github/workflows/: build.yml
i18n/de/: icy_view.ftl
i18n/en/: icy_view.ftl
src/: main.rs
src/ui/: file_view.rs  help_dialog.rs  main_window.rs  mod.rs  sauce_dialog.rs
src/ui/buffer_view/: buffer_view.shader.frag  mod.rs  output_renderer.rs  output_renderer.shader.frag  render.rs  selection.rs  sixel_renderer.rs  terminal_renderer.rs
view_library/: Cargo.toml
view_library/i18n/de/: view_library.ftl
view_library/i18n/en/: view_library.ftl
view_library/src/: lib.rs
view_library/src/ui/: file_view.rs  mod.rs  sauce_dialog.rs
