[package]
name = "icy_view"
version = "0.3.0"
edition = "2021"
description = "A fast ansi art viewer."
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "Icy View"
identifier = "com.github.icy_view"
icon = [ "assets/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2023. All rights reserved."

[dependencies]
eframe = "0.22"
egui_extras = { version="0.22.0", features = ["svg", "image"] }
egui_glow = "0.22.0"
glow = "0.12.2"
memmap = "0.7.0"
clap = { version="4.4.0", features = ["derive"] }
zip = "0.6.6"

image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp"] }
icy_engine = { git = "https://github.com/mkrueger/icy_engine.git" }
#icy_engine = { path ="../icy_engine" }

icy_engine_egui = { git ="https://github.com/mkrueger/icy_engine_egui" }
#icy_engine_egui = { path ="../icy_engine_egui" }


