[package]
name = "icy_view"
version = "0.6.0"
edition = "2021"
description = "A fast ansi art viewer."
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = { version="0.25.0", features = ["svg", "image"] }
egui_glow = "0.25.0"
glow = "0.13.0"
memmap = "0.7.0"
clap = { version="4.4.0", features = ["derive"] }
zip = "0.6.6"
directories = "5.0.1"
log = "0.4"
env_logger = "0.10.0"
i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.7.0"
once_cell = "1.16.0"
rust-embed = "8.0.0"
egui-modal = "0.3.2"
egui-notify = "0.12.0"
lazy_static = "1.4.0"

image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp"] }
view_library = { path ="./view_library" }
icy_engine = { git = "https://github.com/mkrueger/icy_engine.git" }
icy_engine_egui = { git ="https://github.com/mkrueger/icy_engine_egui" }
#icy_engine = { path ="../icy_engine" }
#icy_engine_egui = { path ="../icy_engine_egui" }
github_release_check = "0.2.1"
semver = "1.0.20"

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Icy View"
identifier = "com.github.icy_view"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2023. All rights reserved."

[package.metadata.deb]
section="utils"
copyright = "Copyright (c) Mike Krüger 2023. All rights reserved."
revision=""
license-file="build/license.rtf"
depends = "libasound2"
assets = [
    ["target/release/icy_view", "/usr/bin/", "755"],
    ["build/linux/icy_view.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_view.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_view.png", "644"],
]
