[package]
name = "view_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.0"
egui_extras = { version="0.26.0", features = ["all_loaders"] }
egui_glow = "0.26.0"
glow = "0.13.0"
memmap = "0.7.0"
zip = "0.6.6"
directories = "5.0.1"
log = "0.4"
env_logger = "0.11.1"
i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.8.0"
once_cell = "1.16.0"
rust-embed = "8.0.0"
egui-modal = "0.3.3"
egui-notify = "0.13.0"
thiserror = "1.0"
anyhow = "1.0.75"
serde = "1.0.197"
toml = "0.8.10"

image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp"] }
icy_engine = { git = "https://github.com/mkrueger/icy_engine.git" }
icy_engine_egui = { git ="https://github.com/mkrueger/icy_engine_egui" }
#icy_engine = { path ="../../icy_engine" }
#icy_engine_egui = { path ="../../icy_engine_egui" }
